[tool.poetry]
name = "gserm2025-project"
version = "0.1.0"
description = "Book2Map"
authors = ["Selin <dont@gmail.com>"]
readme = "README.md"
package-mode = false
license = "MIT"



[tool.poetry.dependencies]
python = ">=3.10,<4"
lightning = "^2.5.0.post0"
torch = ">=2.2.0"
openai = "^1.88.0"
google-generativeai = "^0.8.5"
googlemaps = "^4.10.0"
gradio = "^5.34.2"
plotly = "^6.1.2"
pypdf2 = "^3.0.1"
ebooklib = "^0.19"
chardet = "^5.2.0"
pymupdf = "^1.26.3"
langchain = "^0.3.26"
bs4 = "^0.0.2"
pdfplumber = "^0.11.7"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"